--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,31 @@
 plugins {
     id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.13'
+    id 'com.diffplug.spotless' version '6.11.0'
+}
+
+spotless {
+    format 'misc', {
+        target '*.gradle', '*.md', '.gitignore', '*.yaml'
+
+        trimTrailingWhitespace()
+        indentWithSpaces(2)
+        endWithNewline()
+    }
+
+    java {
+        importOrder()
+        removeUnusedImports()
+        googleJavaFormat()
+        formatAnnotations()
+        indentWithSpaces(2)
+    }
+}
+
+tasks.register('fix') {
+    setGroup('Verification')
+    setDescription('Alias for spotlessApply')
+    dependsOn 'spotlessApply'
 }
 
 repositories {
@@ -9,14 +34,12 @@ repositories {
 }
 
 dependencies {
-    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
 }
 
 mainClassName = 'com.cps240.TermProject.Main'
 
 tasks.named('test') {
-    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
 
@@ -27,7 +50,7 @@ javafx {
 
 jar {
     duplicatesStrategy = DuplicatesStrategy.INCLUDE
-    
+
     manifest {
         attributes 'Main-Class': 'com.cps240.TermProject.Launcher'
     }
