--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,19 @@ repositories {
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    testImplementation 'org.testfx:testfx-core:4.0.16-alpha'
+    testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
+    testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
 }
 
 mainClassName = 'com.cps240.TermProject.Main'
 
 tasks.named('test') {
+    systemProperty 'testfx.robot', 'glass'
+    systemProperty 'glass.platform', 'Monocle'
+    systemProperty 'monocle.platform', 'Headless'
+    systemProperty 'prism.order', 'sw'
     useJUnitPlatform()
 }
 
