--- a/build.gradle
+++ b/build.gradle
@@ -44,10 +44,12 @@ dependencies {
 mainClassName = 'com.cps240.TermProject.Main'
 
 tasks.named('test') {
-    systemProperty 'testfx.robot', 'glass'
-    systemProperty 'glass.platform', 'Monocle'
-    systemProperty 'monocle.platform', 'Headless'
-    systemProperty 'prism.order', 'sw'
+    if (project.hasProperty('headless')) {
+        systemProperty 'testfx.robot', 'glass'
+        systemProperty 'glass.platform', 'Monocle'
+        systemProperty 'monocle.platform', 'Headless'
+        systemProperty 'prism.order', 'sw'
+    }
     useJUnitPlatform()
 }
 
