--- a/build.gradle
+++ b/build.gradle
@@ -68,3 +68,7 @@ jar {
         configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
     }
 }
+
+tasks.named('javadoc') {
+    source = sourceSets.main.allJava
+}
